--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - db
     container_name: ${CONTAINER_GHOST_NAME}
     image: ghost:alpine
+    # build: ghost
     restart: unless-stopped
     volumes:
       - ${GHOST_CONTENT}:/var/lib/ghost/content
@@ -14,13 +15,20 @@ services:
     environment:
       # see https://docs.ghost.org/docs/config#section-running-ghost-with-config-env-variables
       
-      url: ${URL}
+      # url: ${URL}
       database__client: mysql
       database__connection__host: ${CONTAINER_DB_NAME}
       database__connection__port: 3306
       database__connection__user: ${MYSQL_USER}
       database__connection__password: ${MYSQL_PASSWORD}
       database__connection__database: ${MYSQL_DATABASE}
+
+      storage__active: ${STORAGE}
+      storage__oss-store__accessKeyId: ${ACCESS_KEY_ID}
+      storage__oss-store__accessKeySecret: ${ACCESS_KEY_SECRET}
+      storage__oss-store__bucket: ${BUCKET}
+      storage__oss-store__region: ${REGION}
+      storage__oss-store__fileKey__prefix: ghost/
 
       VIRTUAL_HOST: ${DOMAINS}
       LETSENCRYPT_HOST: ${DOMAINS}
