--- a/.env.sample
+++ b/.env.sample
@@ -43,24 +43,12 @@ DOMAINS=domain.com,www.domain.com
 # Your email for Let's Encrypt register
 LETSENCRYPT_EMAIL=your_email@domain.com
 
-#
-# Backup location
-#
-# This option should be used when backing up using the script in the repo:
-# https://github.com/evertramos/docker-wordpress-backup
-#BACKUP_PATH_NAME=/backup
 
 #
-# Crontab Rules
+# ghost oss store configuration
 #
-# Please only enable that if you know what you are doing, please refer to these samples:
-#
-# https://crontab.guru/examples.html
-#
-# And test if your setting is working
-#
-# Here is a basic rule for backup everyday at 04 am from monday to friday as of:
-#
-# https://crontab.guru/#00_04_*_*_1-5
-#
-#BACKUP_CRONTAB_RULE="00 04 * * 1-5"
+STORAGE=
+ACCESS_KEY_ID=
+ACCESS_KEY_SECRET=
+BUCKET=
+REGION=
