--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       # see https://docs.ghost.org/docs/config#section-running-ghost-with-config-env-variables
       
-      # url: ${URL}
+      url: ${URL}
       database__client: mysql
       database__connection__host: ${CONTAINER_DB_NAME}
       database__connection__port: 3306
