fix docker-compose yaml

--- a/.env.sample
+++ b/.env.sample
@@ -47,7 +47,7 @@ LETSENCRYPT_EMAIL=your_email@domain.com
 #
 # ghost oss store configuration
 #
-STORAGE=
+STORAGE="ghost-oss-store"
 ACCESS_KEY_ID=
 ACCESS_KEY_SECRET=
 BUCKET=
