--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -1,4 +1,4 @@
 FROM ghost:alpine
 
 RUN apk add --no-cache git && \
-  npm install andy1247008998/ghost-oss-store
+  npm install fancyer/ghost-oss-store
